update output descriptions

--- a/00_Code/testing.ipynb
+++ b/00_Code/testing.ipynb
@@ -215,6 +215,139 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "547280fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "045e6479",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6c639943",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14cc7931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "## add email list\n",
+    "\n",
+    "## add message intro\n",
+    "\n",
+    "## add list of missing prodocs\n",
+    "\n",
+    "## add signature\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f72ef704",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emails have been generated and added to the document.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "\n",
+    "co_emails=pd.read_csv(\"../01_Input/03_Country Meta/co-emails.csv\")\n",
+    "prodoc_completion=pd.read_csv(\"../01_Input/03_Country Meta/prodoc-completion.csv\")\n",
+    "missing_prodocs=prodoc_completion[prodoc_completion[\"Status of Prodoc\"]!=\"Collected\"]\n",
+    "\n",
+    "f = open('../01_Input/03_Country Meta/country-data-links.json')\n",
+    "country_links = json.load(f)\n",
+    "\n",
+    "regions=[\"RBA\",\"RBAS\",\"RBEC\",\"RBLAC\",\"RBAP\"]    \n",
+    "    \n",
+    "for region in regions:\n",
+    "    \n",
+    "    with open('../02_Output/07_Emails/'+region+'-co-validation-emails.txt', mode='w', encoding='utf-8') as output_file:\n",
+    "\n",
+    "        region_emails=co_emails[co_emails[\"Region\"]==region]\n",
+    "        # Process each country\n",
+    "        for index,row in region_emails.iterrows():\n",
+    "            \n",
+    "            \n",
+    "            country_code = row['Code']\n",
+    "            email_list = row['Contact Emails']\n",
+    "            country_name = row['Country Name']\n",
+    "            missing_prodoc_list=[]\n",
+    "            country_link=country_links[country_code]\n",
+    "     \n",
+    "        \n",
+    "            intro=\"I hope this message finds you well. I am reaching out to follow up on our request for your assistance in finalizing the data validation for the Energy Moonshot Tracker effort. We kindly invite you to directly update the Energy Moonshot Tracker Dashboard (hyperlink), as it is currently in an editable mode specifically for this review process.\"\n",
+    "            mid_text=f\"You can also refer to our video guide (link) or the written guide (link), or alternatively, you may update the original {country_name} project data sheet {country_link}.\"            \n",
+    "            mid_text_2=\"As part of this validation process, it is crucial to distinguish between projects that have been already approved and those still in the approval stages. This distinction will enable us to display data only from approved/active/undergoing projects. Therefore, we would appreciate clarification if any projects were solely in the approval stage.\"\n",
+    "            outro=\"Thank you kindly for your invaluable support in this effort. Please kindly respond to this request by Friday of this week, May 3rd.\\n\\nBest Regards,\\nStefano\"\n",
+    "\n",
+    "\n",
+    "            # Prepare the email content\n",
+    "            email_content = \"Email to \"+country_name\n",
+    "            email_content += f\"\\nMailing List: {email_list}\\n\\n\"\n",
+    "\n",
+    "            email_content += f\"Dear {country_name} colleagues,\\n\\n\"\n",
+    "            email_content += intro+\"\\n\\n\"\n",
+    "            email_content += mid_text+\"\\n\\n\"\n",
+    "            email_content += mid_text_2+\"\\n\\n\"\n",
+    "            \n",
+    "            # Add project IDs to the email\n",
+    "            for index,project in missing_prodocs[missing_prodocs[\"Country Code\"]==country_code].iterrows():\n",
+    "                missing_prodoc_list.append(project[\"Project ID\"])\n",
+    "\n",
+    "            if len(missing_prodoc_list)>0:\n",
+    "                email_content += \"It is also essential to link each project directly to the corresponding Prodocs. With this regard, we have noticed that Prodocs are missing for projects\" \n",
+    "                email_content += \" and \".join(missing_prodoc_list)\n",
+    "                email_content += \". Could you kindly share these Prodocs with us at your earliest convenience?\\n\\n\"\n",
+    "\n",
+    "            email_content += outro\n",
+    "            # Append the email to the document\n",
+    "            output_file.write(email_content)\n",
+    "            output_file.write(\"\\n\\n\" + \"=\"*40 + \"\\n\\n\")  # Separator between emails\n",
+    "\n",
+    "print(\"Emails have been generated and added to the document.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0782d7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1675aed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
