--- a/00_Code/Firebase download.ipynb
+++ b/00_Code/Firebase download.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "34a52603",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
     "import json\n",
     "\n",
     "# Path to your service account key\n",
-    "cred = credentials.Certificate('../energy-moonshot-tracker-firebase-adminsdk-k67we-71ec820e5c.json')\n",
+    "cred = ###add service acount key here\n",
     "\n",
     "# Initialize the Firebase Admin SDK\n",
     "firebase_admin.initialize_app(cred)\n",
